# QSCOUT-gatemodels

./: .gitlab-ci.yml  README.md  setup.cfg  setup.py
devel/: refresh-data-files
qscout/gate_pulse/: native_gates.py
qscout/v1/: constituent_error.py  native_gates.py  noisy.py
qscout/v1/std/: __init__.py
src/qscout/: __init__.py
src/qscout/v1/: native_gates.py  noisy.py
src/qscout/v1/std/: __init__.py  jaqal_action.py  jaqal_gates.py  noisy.py  stretched.py
src/qscout/v1/std/stretched/: jaqal_action.py  jaqal_gates.py
src/qscout/v1/zz/: jaqal_action.py  jaqal_gates.py
test/parser/: test_jaqalpup_parser.py
tests/parser/: test_jaqalpup_parser.py
