[metadata]
name = QSCOUT-gatemodels
author = Benjamin C. A. Morrison, Jay Wesley Van Der Wall, Daniel Lobser, Antonio Russo, Kenneth Rudinger, Peter Maunz
author_email = qscout@sandia.gov
description = QSCOUT Gate Models
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
version = 1.0.0
home_page = https://qscout.sandia.gov
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix

[options]
packages = find_namespace:
package_dir =
    =src
install_requires = JaqalPaq==1.0.0 ; numpy
python_requires = >=3.6.5
platforms = any

[options.packages.find]
include =
    qscout
    qscout.*
where = src

[options.extras_require]
tests = pytest

[options.data_files]
share/qscout-gatemodels/tests =
    tests/__init__.py
share/qscout-gatemodels/tests/parser =
    tests/parser/__init__.py
    tests/parser/test_jaqalpup_parser.py

[bdist_wheel]
universal = 1
